--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=PhanMemBanGiay
+application.vendor=Asus
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,42 +33,34 @@ dist.jar=${dist.dir}/PhanMemBanGiay.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/PhanMemBanGiay
+endorsed.classpath=
 excludes=
-file.reference.AbsoluteLayout-RELEASE160.jar=D:\\DuAn\\DuAnNhom6\\lib\\AbsoluteLayout-RELEASE160.jar
-file.reference.barcode.jar=D:\\DuAn\\DuAnNhom6\\lib\\writeBarCore\\barcode.jar
-file.reference.bridj-0.6.2-windows-only.jar=D:\\DuAn\\DuAnNhom6\\lib\\QuetQR\\bridj-0.6.2-windows-only.jar
-file.reference.core-3.3.0.jar=D:\\DuAn\\DuAnNhom6\\lib\\QuetQR\\core-3.3.0.jar
-file.reference.javase-3.3.0.jar=D:\\DuAn\\DuAnNhom6\\lib\\QuetQR\\javase-3.3.0.jar
-file.reference.javax.mail-1.6.2.jar=D:\\DuAn\\DuAnNhom6\\lib\\javax.mail-1.6.2.jar
-file.reference.javax.mail.jar=D:\\DuAn\\DuAnNhom6\\lib\\javax.mail.jar
-file.reference.jcalendar-1.4.jar=D:\\DuAn\\DuAnNhom6\\lib\\jcalendar-1.4.jar
-file.reference.log4j-1.2.17.jar=D:\\DuAn\\DuAnNhom6\\lib\\QuetQR\\log4j-1.2.17.jar
-file.reference.mssql-jdbc-11.2.0.jre17.jar=D:\\DuAn\\DuAnNhom6\\lib\\mssql-jdbc-11.2.0.jre17.jar
-file.reference.qrgen-1.0.jar=D:\\DuAn\\DuAnNhom6\\lib\\writeBarCore\\qrgen-1.0.jar
-file.reference.slf4j-api-1.6.2.jar=D:\\DuAn\\DuAnNhom6\\lib\\QuetQR\\slf4j-api-1.6.2.jar
-file.reference.slf4j-log4j12-1.6.2.jar=D:\\DuAn\\DuAnNhom6\\lib\\QuetQR\\slf4j-log4j12-1.6.2.jar
-file.reference.webcam-capture-0.3.12.jar=D:\\DuAn\\DuAnNhom6\\lib\\QuetQR\\webcam-capture-0.3.12.jar
-file.reference.zxing-core-1.7.jar=D:\\DuAn\\DuAnNhom6\\lib\\writeBarCore\\zxing-core-1.7.jar
-file.reference.zxing-j2se-1.7.jar=D:\\DuAn\\DuAnNhom6\\lib\\writeBarCore\\zxing-j2se-1.7.jar
+file.reference.barcode.jar-1=C:\\Users\\Asus\\Downloads\\DuAn1\\writeBarCore\\barcode.jar
+file.reference.bridj-0.6.2-windows-only.jar-1=C:\\Users\\Asus\\Downloads\\DuAn1\\QuetQR\\bridj-0.6.2-windows-only.jar
+file.reference.core-3.3.0.jar-1=C:\\Users\\Asus\\Downloads\\DuAn1\\QuetQR\\core-3.3.0.jar
+file.reference.javase-3.3.0.jar-1=C:\\Users\\Asus\\Downloads\\DuAn1\\QuetQR\\javase-3.3.0.jar
+file.reference.log4j-1.2.17.jar-1=C:\\Users\\Asus\\Downloads\\DuAn1\\QuetQR\\log4j-1.2.17.jar
+file.reference.qrgen-1.0.jar-1=C:\\Users\\Asus\\Downloads\\DuAn1\\writeBarCore\\qrgen-1.0.jar
+file.reference.slf4j-api-1.6.2.jar-1=C:\\Users\\Asus\\Downloads\\DuAn1\\QuetQR\\slf4j-api-1.6.2.jar
+file.reference.slf4j-log4j12-1.6.2.jar-1=C:\\Users\\Asus\\Downloads\\DuAn1\\QuetQR\\slf4j-log4j12-1.6.2.jar
+file.reference.webcam-capture-0.3.12.jar-1=C:\\Users\\Asus\\Downloads\\DuAn1\\QuetQR\\webcam-capture-0.3.12.jar
+file.reference.zxing-core-1.7.jar-1=C:\\Users\\Asus\\Downloads\\DuAn1\\writeBarCore\\zxing-core-1.7.jar
+file.reference.zxing-j2se-1.7.jar-1=C:\\Users\\Asus\\Downloads\\DuAn1\\writeBarCore\\zxing-j2se-1.7.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.javax.mail-1.6.2.jar}:\
-    ${file.reference.javax.mail.jar}:\
-    ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.mssql-jdbc-11.2.0.jre17.jar}:\
-    ${file.reference.bridj-0.6.2-windows-only.jar}:\
-    ${file.reference.core-3.3.0.jar}:\
-    ${file.reference.javase-3.3.0.jar}:\
-    ${file.reference.log4j-1.2.17.jar}:\
-    ${file.reference.slf4j-api-1.6.2.jar}:\
-    ${file.reference.slf4j-log4j12-1.6.2.jar}:\
-    ${file.reference.webcam-capture-0.3.12.jar}:\
-    ${file.reference.barcode.jar}:\
-    ${file.reference.qrgen-1.0.jar}:\
-    ${file.reference.zxing-core-1.7.jar}:\
-    ${file.reference.zxing-j2se-1.7.jar}:\
-    ${file.reference.AbsoluteLayout-RELEASE160.jar}
+    ${file.reference.bridj-0.6.2-windows-only.jar-1}:\
+    ${file.reference.core-3.3.0.jar-1}:\
+    ${file.reference.javase-3.3.0.jar-1}:\
+    ${file.reference.log4j-1.2.17.jar-1}:\
+    ${file.reference.slf4j-api-1.6.2.jar-1}:\
+    ${file.reference.slf4j-log4j12-1.6.2.jar-1}:\
+    ${file.reference.webcam-capture-0.3.12.jar-1}:\
+    ${file.reference.barcode.jar-1}:\
+    ${file.reference.qrgen-1.0.jar-1}:\
+    ${file.reference.zxing-core-1.7.jar-1}:\
+    ${file.reference.zxing-j2se-1.7.jar-1}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
