--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,34 +35,32 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/PhanMemBanGiay
 endorsed.classpath=
 excludes=
-file.reference.AbsoluteLayout.jar=C:\\Program Files\\NetBeans-13\\netbeans\\java\\modules\\ext\\AbsoluteLayout.jar
-file.reference.barcode.jar-2=D:\\DuAn1_moiTruong\\writeBarCore\\barcode.jar
-file.reference.bridj-0.6.2-windows-only.jar-2=D:\\DuAn1_moiTruong\\QuetQR\\bridj-0.6.2-windows-only.jar
-file.reference.core-3.3.0.jar-2=D:\\DuAn1_moiTruong\\QuetQR\\core-3.3.0.jar
-file.reference.javase-3.3.0.jar-2=D:\\DuAn1_moiTruong\\QuetQR\\javase-3.3.0.jar
-file.reference.log4j-1.2.17.jar-2=D:\\DuAn1_moiTruong\\QuetQR\\log4j-1.2.17.jar
-file.reference.qrgen-1.0.jar-2=D:\\DuAn1_moiTruong\\writeBarCore\\qrgen-1.0.jar
-file.reference.slf4j-api-1.6.2.jar-2=D:\\DuAn1_moiTruong\\QuetQR\\slf4j-api-1.6.2.jar
-file.reference.slf4j-log4j12-1.6.2.jar-2=D:\\DuAn1_moiTruong\\QuetQR\\slf4j-log4j12-1.6.2.jar
-file.reference.webcam-capture-0.3.12.jar-2=D:\\DuAn1_moiTruong\\QuetQR\\webcam-capture-0.3.12.jar
-file.reference.zxing-core-1.7.jar-2=D:\\DuAn1_moiTruong\\writeBarCore\\zxing-core-1.7.jar
-file.reference.zxing-j2se-1.7.jar-2=D:\\DuAn1_moiTruong\\writeBarCore\\zxing-j2se-1.7.jar
+file.reference.barcode.jar=C:\\Users\\Asus\\Downloads\\DuAn1\\writeBarCore\\barcode.jar
+file.reference.bridj-0.6.2-windows-only.jar=C:\\Users\\Asus\\Downloads\\DuAn1\\QuetQR\\bridj-0.6.2-windows-only.jar
+file.reference.core-3.3.0.jar=C:\\Users\\Asus\\Downloads\\DuAn1\\QuetQR\\core-3.3.0.jar
+file.reference.javase-3.3.0.jar=C:\\Users\\Asus\\Downloads\\DuAn1\\QuetQR\\javase-3.3.0.jar
+file.reference.log4j-1.2.17.jar=C:\\Users\\Asus\\Downloads\\DuAn1\\QuetQR\\log4j-1.2.17.jar
+file.reference.qrgen-1.0.jar=C:\\Users\\Asus\\Downloads\\DuAn1\\writeBarCore\\qrgen-1.0.jar
+file.reference.slf4j-api-1.6.2.jar=C:\\Users\\Asus\\Downloads\\DuAn1\\QuetQR\\slf4j-api-1.6.2.jar
+file.reference.slf4j-log4j12-1.6.2.jar=C:\\Users\\Asus\\Downloads\\DuAn1\\QuetQR\\slf4j-log4j12-1.6.2.jar
+file.reference.webcam-capture-0.3.12.jar=C:\\Users\\Asus\\Downloads\\DuAn1\\QuetQR\\webcam-capture-0.3.12.jar
+file.reference.zxing-core-1.7.jar=C:\\Users\\Asus\\Downloads\\DuAn1\\writeBarCore\\zxing-core-1.7.jar
+file.reference.zxing-j2se-1.7.jar=C:\\Users\\Asus\\Downloads\\DuAn1\\writeBarCore\\zxing-j2se-1.7.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.AbsoluteLayout.jar}:\
-    ${file.reference.bridj-0.6.2-windows-only.jar-2}:\
-    ${file.reference.core-3.3.0.jar-2}:\
-    ${file.reference.javase-3.3.0.jar-2}:\
-    ${file.reference.log4j-1.2.17.jar-2}:\
-    ${file.reference.slf4j-api-1.6.2.jar-2}:\
-    ${file.reference.slf4j-log4j12-1.6.2.jar-2}:\
-    ${file.reference.webcam-capture-0.3.12.jar-2}:\
-    ${file.reference.barcode.jar-2}:\
-    ${file.reference.qrgen-1.0.jar-2}:\
-    ${file.reference.zxing-core-1.7.jar-2}:\
-    ${file.reference.zxing-j2se-1.7.jar-2}
+    ${file.reference.bridj-0.6.2-windows-only.jar}:\
+    ${file.reference.core-3.3.0.jar}:\
+    ${file.reference.javase-3.3.0.jar}:\
+    ${file.reference.log4j-1.2.17.jar}:\
+    ${file.reference.slf4j-api-1.6.2.jar}:\
+    ${file.reference.slf4j-log4j12-1.6.2.jar}:\
+    ${file.reference.webcam-capture-0.3.12.jar}:\
+    ${file.reference.barcode.jar}:\
+    ${file.reference.qrgen-1.0.jar}:\
+    ${file.reference.zxing-core-1.7.jar}:\
+    ${file.reference.zxing-j2se-1.7.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -102,7 +100,7 @@ main.class=phanmembangiay.PhanMemBanGiay
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=Zulu_17.0.5_8
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
