--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -170,7 +170,22 @@ javac.classpath=\
     ${file.reference.AbsoluteLayout.jar-1}:\
     ${file.reference.barcode.jar-1}:\
     ${libs.absolutelayout.classpath}:\
-<<<<<<< HEAD
+    <<<<<<< HEAD:\
+    ${file.reference.AbsoluteLayout-RELEASE160.jar}:\
+    ${file.reference.javax.mail-1.6.2.jar-1}:\
+    ${file.reference.javax.mail.jar-1}:\
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.bridj-0.6.2-windows-only.jar-3}:\
+    ${file.reference.core-3.3.0.jar-3}:\
+    ${file.reference.javase-3.3.0.jar-3}:\
+    ${file.reference.log4j-1.2.17.jar-3}:\
+    ${file.reference.slf4j-api-1.6.2.jar-3}:\
+    ${file.reference.slf4j-log4j12-1.6.2.jar-3}:\
+    ${file.reference.webcam-capture-0.3.12.jar-3}:\
+    ${file.reference.barcode.jar-3}:\
+    ${file.reference.qrgen-1.0.jar-3}:\
+    ${file.reference.zxing-core-1.7.jar-3}:\
+    ${file.reference.zxing-j2se-1.7.jar-3}
     ${file.reference.webcam-capture-0.3.12.jar-3}:\
     ${file.reference.bridj-0.6.2-windows-only.jar-3}:\
     ${file.reference.core-3.3.0.jar-3}:\
