--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -146,7 +146,21 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-<<<<<<< HEAD
+    ${file.reference.barcode.jar}:\
+    ${file.reference.qrgen-1.0.jar}:\
+    ${file.reference.zxing-core-1.7.jar}:\
+    ${file.reference.zxing-j2se-1.7.jar}:\
+    ${file.reference.javax.mail-1.6.2.jar}:\
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.mssql-jdbc-11.2.0.jre17.jar}:\
+    ${file.reference.bridj-0.6.2-windows-only.jar}:\
+    ${file.reference.core-3.3.0.jar}:\
+    ${file.reference.javase-3.3.0.jar}:\
+    ${file.reference.log4j-1.2.17.jar}:\
+    ${file.reference.slf4j-api-1.6.2.jar}:\
+    ${file.reference.slf4j-log4j12-1.6.2.jar}:\
+    ${file.reference.webcam-capture-0.3.12.jar}
     ${file.reference.barcode.jar-2}:\
     ${file.reference.qrgen-1.0.jar-2}:\
     ${file.reference.zxing-core-1.7.jar-2}:\
