--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -83,7 +83,7 @@ file.reference.log4j-1.2.17.jar=D:\\Duan1\\QuetQR\\log4j-1.2.17.jar
 file.reference.log4j-1.2.17.jar-2=lib\\QuetQR\\log4j-1.2.17.jar
 file.reference.log4j-1.2.17.jar-3=lib\\QuetQR\\log4j-1.2.17.jar
 file.reference.mssql-jdbc-11.2.0.jre17.jar=C:\\JDBC\\sqljdbc_11.2\\enu\\mssql-jdbc-11.2.0.jre17.jar
-file.reference.mssql-jdbc-11.2.0.jre17.jar-1=lib\\mssql-jdbc-11.2.0.jre17.jar
+file.reference.mssql-jdbc-11.2.0.jre17.jar-1=lib/mssql-jdbc-11.2.0.jre17.jar
 file.reference.qrgen-1.0.jar=D:\\Duan1\\writeBarCore\\qrgen-1.0.jar
 file.reference.qrgen-1.0.jar-2=lib\\writeBarCore\\qrgen-1.0.jar
 file.reference.qrgen-1.0.jar-3=lib\\writeBarCore\\qrgen-1.0.jar
@@ -157,7 +157,19 @@ includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-<<<<<<< HEAD
+    ${file.reference.bridj-0.6.2-windows-only.jar-1}:\
+    ${file.reference.core-3.3.0.jar-1}:\
+    ${file.reference.javase-3.3.0.jar-1}:\
+    ${file.reference.log4j-1.2.17.jar-1}:\
+    ${file.reference.slf4j-api-1.6.2.jar-1}:\
+    ${file.reference.slf4j-log4j12-1.6.2.jar-1}:\
+    ${file.reference.webcam-capture-0.3.12.jar-1}:\
+    ${file.reference.barcode.jar-1}:\
+    ${file.reference.qrgen-1.0.jar-1}:\
+    ${file.reference.zxing-core-1.7.jar-1}:\
+    ${file.reference.zxing-j2se-1.7.jar-1}:\
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.mssql-jdbc-11.2.0.jre17.jar-1}
     <<<<<<< HEAD:\
     ${file.reference.barcode.jar-1}:\
     ${file.reference.qrgen-1.0.jar-1}:\
