--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -150,7 +150,27 @@ jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.jcalendar-1.4.jar-1}:\
-<<<<<<< HEAD
+    ${file.reference.javax.mail-1.6.2.jar-1}:\
+    ${file.reference.javax.mail.jar-1}:\
+    ${file.reference.mssql-jdbc-11.2.0.jre17.jar-1}:\
+    ${file.reference.barcode.jar-3}:\
+    ${file.reference.qrgen-1.0.jar-3}:\
+    ${file.reference.zxing-core-1.7.jar-3}:\
+    ${file.reference.zxing-j2se-1.7.jar-3}:\
+    ${file.reference.bridj-0.6.2-windows-only.jar-3}:\
+    ${file.reference.core-3.3.0.jar-3}:\
+    ${file.reference.javase-3.3.0.jar-3}:\
+    ${file.reference.log4j-1.2.17.jar-3}:\
+    ${file.reference.slf4j-api-1.6.2.jar-3}:\
+    ${file.reference.slf4j-log4j12-1.6.2.jar-3}:\
+    ${file.reference.webcam-capture-0.3.12.jar-3}:\
+    ${file.reference.commons-codec-1.11.jar}:\
+    ${file.reference.commons-collections4-4.2.jar}:\
+    ${file.reference.commons-compress-1.18.jar}:\
+    ${file.reference.poi-4.0.1.jar}:\
+    ${file.reference.poi-ooxml-4.0.1.jar}:\
+    ${file.reference.poi-ooxml-schemas-4.0.1.jar}:\
+    ${file.reference.xmlbeans-3.0.2.jar}
     ${file.reference.commons-codec-1.11.jar}:\
     ${file.reference.commons-collections4-4.2.jar}:\
     ${file.reference.commons-compress-1.18.jar}:\
