--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -533,7 +533,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=PhanMemBanGiay
-main.class=phanmembangiay.PhanMemBanGiay
+main.class=Views.DangNhap
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
