--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -70,7 +70,7 @@ file.reference.javase-3.3.0.jar=C:\\Users\\Asus\\Downloads\\DuAn1\\QuetQR\\javas
 file.reference.javase-3.3.0.jar-1=lib\\QuetQR\\javase-3.3.0.jar
 file.reference.javax.mail-1.6.2.jar-1=lib\\javax.mail-1.6.2.jar
 file.reference.javax.mail.jar-1=lib\\javax.mail.jar
-file.reference.jcalendar-1.4.jar-1=lib\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=lib/jcalendar-1.4.jar
 =======
 file.reference.javax.mail-1.6.2.jar-1=lib\\javax.mail-1.6.2.jar
 file.reference.javax.mail.jar-1=lib\\javax.mail.jar
@@ -187,7 +187,8 @@ javac.classpath=\
     ${file.reference.log4j-1.2.17.jar-1}:\
     ${file.reference.slf4j-api-1.6.2.jar-1}:\
     ${file.reference.slf4j-log4j12-1.6.2.jar-1}:\
-    ${file.reference.webcam-capture-0.3.12.jar-1}
+    ${file.reference.webcam-capture-0.3.12.jar-1}:\
+    ${file.reference.jcalendar-1.4.jar-1}
     ${file.reference.bridj-0.6.2-windows-only.jar-1}:\
     ${file.reference.core-3.3.0.jar-1}:\
     ${file.reference.javase-3.3.0.jar-1}:\
