--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -189,7 +189,10 @@ javac.classpath=\
     ${file.reference.slf4j-api-1.6.2.jar-1}:\
     ${file.reference.slf4j-log4j12-1.6.2.jar-1}:\
     ${file.reference.webcam-capture-0.3.12.jar-1}:\
-<<<<<<< HEAD
+    ${file.reference.barcode.jar-1}:\
+    ${file.reference.qrgen-1.0.jar-1}:\
+    ${file.reference.zxing-core-1.7.jar-1}:\
+    ${file.reference.zxing-j2se-1.7.jar-1}
     ${file.reference.barcode.jar-1}:\
     ${file.reference.qrgen-1.0.jar-1}:\
     ${file.reference.zxing-core-1.7.jar-1}:\
