--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -180,8 +180,7 @@ javac.classpath=\
     ${file.reference.activation.jar}:\
     ${file.reference.javax.mail-1.6.2.jar-1}:\
     ${file.reference.javax.mail.jar-1}:\
-    ${file.reference.jcalendar-1.4.jar-1}:\
-<<<<<<< HEAD
+    ${file.reference.jcalendar-1.4.jar-1}
     ${file.reference.barcode.jar-1}:\
     ${file.reference.qrgen-1.0.jar-1}:\
     ${file.reference.zxing-core-1.7.jar-1}:\
