--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,5 +1,7 @@
 #Tue Apr 04 09:28:02 ICT 2023
 =\=\=\=\=\=\=
+jar.archive.disabled=${jnlp.enabled}
+jar.index=${jnlp.enabled}
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}:\
@@ -35,7 +37,25 @@ file.reference.webcam-capture-0.3.12.jar-1=lib/QuetQR/webcam-capture-0.3.12.jar
 file.reference.jasperreports-6.10.0.jar=lib\\libs for report\\jasperreports-6.10.0.jar
 file.reference.zxing-j2se-1.7.jar-3=lib/dayduthuvien/zxing-j2se-1.7.jar
 ${file.reference.AbsoluteLayout.jar}=<<<<<<< HEAD
-run.test.modulepath=${javac.test.modulepath}
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
+# Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
+manifest.custom.application.library.allowable.codebase=
+# Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
+manifest.custom.caller.allowable.codebase=
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
+run.test.modulepath=\
+    ${javac.test.modulepath}
 debug.test.modulepath=${run.test.modulepath}
 file.reference.zxing-j2se-1.7.jar-2=D\:\\DuAn1_moiTruong\\writeBarCore\\zxing-j2se-1.7.jar
 file.reference.zxing-j2se-1.7.jar-1=lib/writeBarCore/zxing-j2se-1.7.jar
@@ -60,7 +80,9 @@ file.reference.commons-collections4-4.4.jar=lib\\libs for report\\commons-collec
 <<<<<<<=HEAD
 jlink.additionalparam=
 ${file.reference.activation.jar}=${file.reference.javax.mail-1.6.2.jar-1}\:${file.reference.javax.mail.jar-1}
-run.classpath=${javac.classpath}\:${build.classes.dir}
+run.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}
 file.reference.javax.mail-1.6.2.jar=D\:\\DuAn\\DuAnNhom6\\lib\\javax.mail-1.6.2.jar
 test.src.dir=test
 file.reference.poi-ooxml-4.0.1.jar=lib\\thuvienpoi\\poi-ooxml-4.0.1.jar
@@ -102,7 +124,9 @@ ${file.reference.bridj-0.6.2-windows-only.jar-1}=${file.reference.core-3.3.0.jar
 file.reference.qrgen-1.0.jar=D\:\\DuAn\\DuAnNhom6\\lib\\writeBarCore\\qrgen-1.0.jar
 build.generated.dir=${build.dir}/generated
 file.reference.xmlbeans-3.0.2.jar=lib/thuvienpoi/xmlbeans-3.0.2.jar
-run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
+run.test.classpath=\
+    ${javac.test.classpath}:\
+    ${build.test.classes.dir}
 dist.jlink.output=${dist.jlink.dir}/PhanMemBanGiay
 src.dir=src
 debug.classpath=${run.classpath}
@@ -149,9 +173,11 @@ javadoc.html5=false
 javac.test.processorpath=${javac.test.classpath}
 javac.modulepath=
 file.reference.AbsoluteLayout.jar=C\:\\Program Files\\NetBeans-13\\netbeans\\java\\modules\\ext\\AbsoluteLayout.jar
-javac.processorpath=${javac.classpath}
+javac.processorpath=\
+    ${javac.classpath}
 ${file.reference.poi-ooxml-schemas-4.0.1.jar}=${file.reference.xmlbeans-3.0.2.jar}
-run.modulepath=${javac.modulepath}
+run.modulepath=\
+    ${javac.modulepath}
 file.reference.poi-4.0.1.jar-1=lib/dayduthuvien/poi-4.0.1.jar
 javac.compilerargs=
 endorsed.classpath=
@@ -173,7 +199,51 @@ jlink.additionalmodules=
 file.reference.slf4j-api-1.6.2.jar-1=lib/QuetQR/slf4j-api-1.6.2.jar
 javadoc.encoding=${source.encoding}
 file.reference.slf4j-api-1.6.2.jar-2=D\:\\DuAn1_moiTruong\\QuetQR\\slf4j-api-1.6.2.jar
-javac.classpath=${libs.absolutelayout.classpath}\:${file.reference.AbsoluteLayout-RELEASE160.jar-1}\:${file.reference.activation.jar-1}\:${file.reference.barcode.jar-3}\:${file.reference.bridj-0.6.2-windows-only.jar-3}\:${file.reference.commons-codec-1.11.jar-1}\:${file.reference.commons-collections4-4.2.jar-1}\:${file.reference.commons-compress-1.18.jar-1}\:${file.reference.core-3.3.0.jar-3}\:${file.reference.javase-3.3.0.jar-3}\:${file.reference.javax.mail-1.6.2.jar-2}\:${file.reference.javax.mail.jar-2}\:${file.reference.jcalendar-1.4.jar-3}\:${file.reference.log4j-1.2.17.jar-3}\:${file.reference.mssql-jdbc-11.2.0.jre17.jar-2}\:${file.reference.mssql-jdbc-9.4.0.jre16.jar-2}\:${file.reference.poi-4.0.1.jar-1}\:${file.reference.poi-ooxml-4.0.1.jar-1}\:${file.reference.poi-ooxml-schemas-4.0.1.jar-1}\:${file.reference.qrgen-1.0.jar-3}\:${file.reference.slf4j-api-1.6.2.jar-3}\:${file.reference.slf4j-log4j12-1.6.2.jar-3}\:${file.reference.webcam-capture-0.3.12.jar-3}\:${file.reference.xmlbeans-3.0.2.jar-1}\:${file.reference.zxing-core-1.7.jar-3}\:${file.reference.zxing-j2se-1.7.jar-3}\:${file.reference.AbsoluteLayout-RELEASE160.jar}\:${file.reference.AbsoluteLayout.jar-1}\:${file.reference.commons-beanutils-1.8.3.jar}\:${file.reference.commons-collections-3.2.1-1.0.0.jar}\:${file.reference.commons-digester-2.1.jar}\:${file.reference.commons-logging-api-1.1.jar}\:${file.reference.commons-collections4-4.4.jar}\:${file.reference.groovy-all-2.1.3.jar}\:${file.reference.itext-2.1.7.jar}\:${file.reference.itextpdf-5.3.4.jar}\:${file.reference.jasperreports-6.10.0.jar}\:${file.reference.jasperreports-fonts-6.10.0.jar}\:${file.reference.itext-pdfa-5.4.0.jar}\:${file.reference.gnujaxp.jar}\:${file.reference.jcommon-1.0.0.jar}\:${file.reference.jfreechart-1.0.1.jar}\:${file.reference.junit.jar}\:${file.reference.servlet.jar}
+javac.classpath=\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.AbsoluteLayout-RELEASE160.jar-1}:\
+    ${file.reference.activation.jar-1}:\
+    ${file.reference.barcode.jar-3}:\
+    ${file.reference.bridj-0.6.2-windows-only.jar-3}:\
+    ${file.reference.commons-codec-1.11.jar-1}:\
+    ${file.reference.commons-collections4-4.2.jar-1}:\
+    ${file.reference.commons-compress-1.18.jar-1}:\
+    ${file.reference.core-3.3.0.jar-3}:\
+    ${file.reference.javase-3.3.0.jar-3}:\
+    ${file.reference.javax.mail-1.6.2.jar-2}:\
+    ${file.reference.javax.mail.jar-2}:\
+    ${file.reference.jcalendar-1.4.jar-3}:\
+    ${file.reference.log4j-1.2.17.jar-3}:\
+    ${file.reference.mssql-jdbc-11.2.0.jre17.jar-2}:\
+    ${file.reference.mssql-jdbc-9.4.0.jre16.jar-2}:\
+    ${file.reference.poi-4.0.1.jar-1}:\
+    ${file.reference.poi-ooxml-4.0.1.jar-1}:\
+    ${file.reference.poi-ooxml-schemas-4.0.1.jar-1}:\
+    ${file.reference.qrgen-1.0.jar-3}:\
+    ${file.reference.slf4j-api-1.6.2.jar-3}:\
+    ${file.reference.slf4j-log4j12-1.6.2.jar-3}:\
+    ${file.reference.webcam-capture-0.3.12.jar-3}:\
+    ${file.reference.xmlbeans-3.0.2.jar-1}:\
+    ${file.reference.zxing-core-1.7.jar-3}:\
+    ${file.reference.zxing-j2se-1.7.jar-3}:\
+    ${file.reference.AbsoluteLayout-RELEASE160.jar}:\
+    ${file.reference.AbsoluteLayout.jar-1}:\
+    ${file.reference.commons-beanutils-1.8.3.jar}:\
+    ${file.reference.commons-collections-3.2.1-1.0.0.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-logging-api-1.1.jar}:\
+    ${file.reference.commons-collections4-4.4.jar}:\
+    ${file.reference.groovy-all-2.1.3.jar}:\
+    ${file.reference.itext-2.1.7.jar}:\
+    ${file.reference.itextpdf-5.3.4.jar}:\
+    ${file.reference.jasperreports-6.10.0.jar}:\
+    ${file.reference.jasperreports-fonts-6.10.0.jar}:\
+    ${file.reference.itext-pdfa-5.4.0.jar}:\
+    ${file.reference.gnujaxp.jar}:\
+    ${file.reference.jcommon-1.0.0.jar}:\
+    ${file.reference.jfreechart-1.0.1.jar}:\
+    ${file.reference.junit.jar}:\
+    ${file.reference.servlet.jar}
 file.reference.jcalendar-1.4.jar-3=lib/dayduthuvien/jcalendar-1.4.jar
 dist.jlink.dir=${dist.dir}/jlink
 file.reference.commons-logging-api-1.1.jar=lib\\libs for report\\commons-logging-api-1.1.jar
@@ -196,7 +266,8 @@ file.reference.slf4j-log4j12-1.6.2.jar=D\:\\DuAn\\DuAnNhom6\\lib\\QuetQR\\slf4j-
 ${file.reference.commons-codec-1.11.jar}=${file.reference.commons-collections4-4.2.jar}\:${file.reference.commons-compress-1.18.jar}\:${file.reference.poi-4.0.1.jar}\:${file.reference.poi-ooxml-4.0.1.jar}\:${file.reference.poi-ooxml-schemas-4.0.1.jar}\:${file.reference.xmlbeans-3.0.2.jar}\:${file.reference.barcode.jar-3}\:${file.reference.qrgen-1.0.jar-3}\:${file.reference.zxing-core-1.7.jar-3}\:${file.reference.zxing-j2se-1.7.jar-3}\:\=\=\=\=\=\=\=
 application.title=PhanMemBanGiay
 >>>>>>>=3756dd14dd493cd4e6988fa77a181b64e214dffa
-javac.test.modulepath=${javac.modulepath}
+javac.test.modulepath=\
+    ${javac.modulepath}
 ${file.reference.barcode.jar-1}=${file.reference.qrgen-1.0.jar-1}\:${file.reference.zxing-core-1.7.jar-1}\:${file.reference.zxing-j2se-1.7.jar-1}\:${file.reference.bridj-0.6.2-windows-only.jar-1}\:${file.reference.core-3.3.0.jar-1}\:${file.reference.javase-3.3.0.jar-1}\:${file.reference.log4j-1.2.17.jar-1}\:${file.reference.slf4j-api-1.6.2.jar-1}\:${file.reference.slf4j-log4j12-1.6.2.jar-1}\:${file.reference.webcam-capture-0.3.12.jar-1}
 file.reference.slf4j-api-1.6.2.jar=D\:\\DuAn\\DuAnNhom6\\lib\\QuetQR\\slf4j-api-1.6.2.jar
 annotation.processing.run.all.processors=true
