--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,10 +1,6 @@
-#Tue Apr 04 09:28:02 ICT 2023
+#Tue Apr 04 19:38:15 ICT 2023
 =\=\=\=\=\=\=
-javac.test.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit_4.classpath}:\
-    ${libs.hamcrest.classpath}
+javac.test.classpath=${javac.classpath}\:${build.classes.dir}\:${libs.junit_4.classpath}\:${libs.hamcrest.classpath}
 file.reference.servlet.jar=lib\\Jchart\\servlet.jar
 ${file.reference.jxl-2.6.9.jar}=${file.reference.mssql-jdbc-11.2.0.jre17.jar-1}
 file.reference.zxing-j2se-1.7.jar=D\:\\DuAn\\DuAnNhom6\\lib\\writeBarCore\\zxing-j2se-1.7.jar
@@ -24,8 +20,8 @@ file.reference.webcam-capture-0.3.12.jar-3=lib/dayduthuvien/webcam-capture-0.3.1
 file.reference.poi-ooxml-4.0.1.jar-1=lib/dayduthuvien/poi-ooxml-4.0.1.jar
 javac.source=17
 javadoc.use=true
-file.reference.commons-collections4-4.2.jar-1=lib/dayduthuvien/commons-collections4-4.2.jar
 file.reference.junit.jar=lib\\Jchart\\junit.jar
+file.reference.commons-collections4-4.2.jar-1=lib/dayduthuvien/commons-collections4-4.2.jar
 javadoc.notree=false
 application.vendor=Asus
 ${file.reference.mssql-jdbc-9.4.0.jre16.jar-1}=${libs.absolutelayout.classpath}\:\=\=\=\=\=\=\=
@@ -53,7 +49,7 @@ file.reference.log4j-1.2.17.jar-3=lib/dayduthuvien/log4j-1.2.17.jar
 file.reference.commons-compress-1.18.jar-1=lib/dayduthuvien/commons-compress-1.18.jar
 file.reference.commons-collections-3.2.1-1.0.0.jar=lib\\libs for report\\commons-collections-3.2.1-1.0.0.jar
 ${file.reference.commons-beanutils-1.8.3.jar}=${file.reference.commons-collections-3.2.1-1.0.0.jar}\:${file.reference.commons-digester-2.1.jar}\:${file.reference.commons-logging-api-1.1.jar}\:${file.reference.itext-pdfa-5.4.0.jar}\:${file.reference.javax.mail-1.6.2.jar-1}\:${file.reference.javax.mail.jar-1}\:${file.reference.jcalendar-1.4.jar-1}\:${file.reference.activation.jar}\:${file.reference.AbsoluteLayout.jar}
-platform.active=default_platform
+platform.active=Zulu_17.0.5_8
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 file.reference.commons-collections4-4.4.jar=lib\\libs for report\\commons-collections4-4.4.jar
@@ -137,9 +133,10 @@ file.reference.lib-writeBarCore=lib\\writeBarCore
 file.reference.commons-collections4-4.2.jar=lib/thuvienpoi/commons-collections4-4.2.jar
 dist.dir=dist
 build.dir=build
+file.reference.jfreechart-1.0.1-demo.jar=lib\\jfreechart-1.0.1\\jfreechart-1.0.1-demo.jar
 file.reference.zxing-core-1.7.jar=D\:\\DuAn\\DuAnNhom6\\lib\\writeBarCore\\zxing-core-1.7.jar
 file.reference.mssql-jdbc-11.2.0.jre17.jar-1=lib/mssql-jdbc-11.2.0.jre17.jar
-file.reference.mssql-jdbc-11.2.0.jre17.jar-2=lib/dayduthuvien/mssql-jdbc-11.2.0.jre17.jar
+file.reference.mssql-jdbc-11.2.0.jre17.jar-2=lib\\dayduthuvien\\mssql-jdbc-11.2.0.jre17.jar
 javadoc.version=false
 debug.test.classpath=${run.test.classpath}
 javac.external.vm=true
@@ -173,7 +170,7 @@ jlink.additionalmodules=
 file.reference.slf4j-api-1.6.2.jar-1=lib/QuetQR/slf4j-api-1.6.2.jar
 javadoc.encoding=${source.encoding}
 file.reference.slf4j-api-1.6.2.jar-2=D\:\\DuAn1_moiTruong\\QuetQR\\slf4j-api-1.6.2.jar
-javac.classpath=${libs.absolutelayout.classpath}\:${file.reference.AbsoluteLayout-RELEASE160.jar-1}\:${file.reference.activation.jar-1}\:${file.reference.barcode.jar-3}\:${file.reference.bridj-0.6.2-windows-only.jar-3}\:${file.reference.commons-codec-1.11.jar-1}\:${file.reference.commons-collections4-4.2.jar-1}\:${file.reference.commons-compress-1.18.jar-1}\:${file.reference.core-3.3.0.jar-3}\:${file.reference.javase-3.3.0.jar-3}\:${file.reference.javax.mail-1.6.2.jar-2}\:${file.reference.javax.mail.jar-2}\:${file.reference.jcalendar-1.4.jar-3}\:${file.reference.log4j-1.2.17.jar-3}\:${file.reference.mssql-jdbc-11.2.0.jre17.jar-2}\:${file.reference.mssql-jdbc-9.4.0.jre16.jar-2}\:${file.reference.poi-4.0.1.jar-1}\:${file.reference.poi-ooxml-4.0.1.jar-1}\:${file.reference.poi-ooxml-schemas-4.0.1.jar-1}\:${file.reference.qrgen-1.0.jar-3}\:${file.reference.slf4j-api-1.6.2.jar-3}\:${file.reference.slf4j-log4j12-1.6.2.jar-3}\:${file.reference.webcam-capture-0.3.12.jar-3}\:${file.reference.xmlbeans-3.0.2.jar-1}\:${file.reference.zxing-core-1.7.jar-3}\:${file.reference.zxing-j2se-1.7.jar-3}\:${file.reference.AbsoluteLayout-RELEASE160.jar}\:${file.reference.AbsoluteLayout.jar-1}\:${file.reference.commons-beanutils-1.8.3.jar}\:${file.reference.commons-collections-3.2.1-1.0.0.jar}\:${file.reference.commons-digester-2.1.jar}\:${file.reference.commons-logging-api-1.1.jar}\:${file.reference.commons-collections4-4.4.jar}\:${file.reference.groovy-all-2.1.3.jar}\:${file.reference.itext-2.1.7.jar}\:${file.reference.itextpdf-5.3.4.jar}\:${file.reference.jasperreports-6.10.0.jar}\:${file.reference.jasperreports-fonts-6.10.0.jar}\:${file.reference.itext-pdfa-5.4.0.jar}\:${file.reference.gnujaxp.jar}\:${file.reference.jcommon-1.0.0.jar}\:${file.reference.jfreechart-1.0.1.jar}\:${file.reference.junit.jar}\:${file.reference.servlet.jar}
+javac.classpath=${libs.absolutelayout.classpath}\:${file.reference.AbsoluteLayout-RELEASE160.jar-1}\:${file.reference.activation.jar-1}\:${file.reference.barcode.jar-3}\:${file.reference.bridj-0.6.2-windows-only.jar-3}\:${file.reference.commons-codec-1.11.jar-1}\:${file.reference.commons-collections4-4.2.jar-1}\:${file.reference.commons-compress-1.18.jar-1}\:${file.reference.core-3.3.0.jar-3}\:${file.reference.javase-3.3.0.jar-3}\:${file.reference.javax.mail-1.6.2.jar-2}\:${file.reference.javax.mail.jar-2}\:${file.reference.jcalendar-1.4.jar-3}\:${file.reference.log4j-1.2.17.jar-3}\:${file.reference.mssql-jdbc-11.2.0.jre17.jar-2}\:${file.reference.mssql-jdbc-9.4.0.jre16.jar-2}\:${file.reference.poi-4.0.1.jar-1}\:${file.reference.poi-ooxml-4.0.1.jar-1}\:${file.reference.poi-ooxml-schemas-4.0.1.jar-1}\:${file.reference.qrgen-1.0.jar-3}\:${file.reference.slf4j-api-1.6.2.jar-3}\:${file.reference.slf4j-log4j12-1.6.2.jar-3}\:${file.reference.webcam-capture-0.3.12.jar-3}\:${file.reference.xmlbeans-3.0.2.jar-1}\:${file.reference.zxing-core-1.7.jar-3}\:${file.reference.zxing-j2se-1.7.jar-3}\:${file.reference.AbsoluteLayout-RELEASE160.jar}\:${file.reference.AbsoluteLayout.jar-1}\:${file.reference.commons-beanutils-1.8.3.jar}\:${file.reference.commons-collections-3.2.1-1.0.0.jar}\:${file.reference.commons-digester-2.1.jar}\:${file.reference.commons-logging-api-1.1.jar}\:${file.reference.commons-collections4-4.4.jar}\:${file.reference.groovy-all-2.1.3.jar}\:${file.reference.itext-2.1.7.jar}\:${file.reference.itextpdf-5.3.4.jar}\:${file.reference.jasperreports-6.10.0.jar}\:${file.reference.jasperreports-fonts-6.10.0.jar}\:${file.reference.itext-pdfa-5.4.0.jar}\:${file.reference.gnujaxp.jar}\:${file.reference.jcommon-1.0.0.jar}\:${file.reference.jfreechart-1.0.1.jar}\:${file.reference.junit.jar}\:${file.reference.servlet.jar}\:${file.reference.jfreechart-1.0.1-demo.jar}\:${file.reference.mssql-jdbc-11.2.0.jre17.jar-2}
 file.reference.jcalendar-1.4.jar-3=lib/dayduthuvien/jcalendar-1.4.jar
 dist.jlink.dir=${dist.dir}/jlink
 file.reference.commons-logging-api-1.1.jar=lib\\libs for report\\commons-logging-api-1.1.jar
