--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,10 +1,18 @@
 #Tue Apr 04 23:20:34 ICT 2023
 =\=\=\=\=\=\=
+file.reference.commons-beanutils-1.8.3.jar=lib\\libreport\\commons-beanutils-1.8.3.jar
+file.reference.commons-collections-3.2.1-1.0.0.jar=lib\\libreport\\commons-collections-3.2.1-1.0.0.jar
+file.reference.commons-collections4-4.4.jar=lib\\libreport\\commons-collections4-4.4.jar
+file.reference.commons-digester-2.1.jar=lib\\libreport\\commons-digester-2.1.jar
+file.reference.commons-logging-api-1.1.jar=lib\\libreport\\commons-logging-api-1.1.jar
+file.reference.groovy-all-2.1.3.jar=lib\\libreport\\groovy-all-2.1.3.jar
+file.reference.itext-2.1.7.jar=lib\\libreport\\itext-2.1.7.jar
+file.reference.itextpdf-5.3.4.jar=lib\\libreport\\itextpdf-5.3.4.jar
+file.reference.jasperreports-6.10.0.jar=lib\\libreport\\jasperreports-6.10.0.jar
+file.reference.xercesimpl-2.7.0.jar=lib\\libreport\\xercesimpl-2.7.0.jar
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit_4.classpath}:\
-    ${libs.hamcrest.classpath}
+    ${build.classes.dir}
 excludes=
 file.reference.servlet.jar=lib\\Jchart\\servlet.jar
 dist.javadoc.dir=${dist.dir}/javadoc
@@ -12,7 +20,6 @@ ${file.reference.jcalendar-1.4.jar-1}=>>>>>>> origin/master
 ${file.reference.jxl-2.6.9.jar}=${file.reference.mssql-jdbc-11.2.0.jre17.jar-1}
 file.reference.zxing-j2se-1.7.jar=D\:\\DuAn\\DuAnNhom6\\lib\\writeBarCore\\zxing-j2se-1.7.jar
 jnlp.offline-allowed=false
-file.reference.groovy-all-2.1.3.jar=lib\\libs for report\\groovy-all-2.1.3.jar
 jnlp.signing.keystore=
 file.reference.bridj-0.6.2-windows-only.jar-1=lib\\QuetQR\\bridj-0.6.2-windows-only.jar
 file.reference.bridj-0.6.2-windows-only.jar-2=D\:\\DuAn1_moiTruong\\QuetQR\\bridj-0.6.2-windows-only.jar
@@ -47,9 +54,7 @@ file.reference.javax.mail.jar=D\:\\DuAn\\DuAnNhom6\\lib\\javax.mail.jar
 file.reference.slf4j-log4j12-1.6.2.jar-1=lib\\QuetQR\\slf4j-log4j12-1.6.2.jar
 ${file.reference.xmlbeans-3.0.2.jar}=${file.reference.bridj-0.6.2-windows-only.jar-1}\:${file.reference.core-3.3.0.jar-1}\:${file.reference.javase-3.3.0.jar-1}\:${file.reference.log4j-1.2.17.jar-1}\:${file.reference.slf4j-api-1.6.2.jar-1}\:${file.reference.slf4j-log4j12-1.6.2.jar-1}\:<<<<<<< HEAD
 file.reference.jcommon-1.0.0.jar=lib\\Jchart\\jcommon-1.0.0.jar
-file.reference.commons-beanutils-1.8.3.jar=lib\\libs for report\\commons-beanutils-1.8.3.jar
 file.reference.webcam-capture-0.3.12.jar-1=lib\\QuetQR\\webcam-capture-0.3.12.jar
-file.reference.jasperreports-6.10.0.jar=lib\\libs for report\\jasperreports-6.10.0.jar
 manifest.custom.permissions=
 ${file.reference.AbsoluteLayout.jar}=<<<<<<< HEAD
 mkdist.disabled=false
@@ -67,7 +72,6 @@ file.reference.core-3.3.0.jar-2=D\:\\DuAn1_moiTruong\\QuetQR\\core-3.3.0.jar
 ${file.reference.mssql-jdbc-11.2.0.jre17.jar}=>>>>>>> 34ce105e07b368cd3386f8626f3f9ad95ba53bd1
 file.reference.commons-collections4-4.2.jar=lib\\thuvienpoi\\commons-collections4-4.2.jar
 jnlp.enabled=false
-file.reference.itext-2.1.7.jar=lib\\libs for report\\itext-2.1.7.jar
 dist.dir=dist
 build.dir=build
 dist.archive.excludes=
@@ -78,7 +82,6 @@ file.reference.log4j-1.2.17.jar-2=D\:\\DuAn1_moiTruong\\QuetQR\\log4j-1.2.17.jar
 file.reference.mssql-jdbc-11.2.0.jre17.jar-1=lib\\mssql-jdbc-11.2.0.jre17.jar
 file.reference.log4j-1.2.17.jar-1=lib\\QuetQR\\log4j-1.2.17.jar
 javadoc.version=false
-file.reference.commons-collections-3.2.1-1.0.0.jar=lib\\libs for report\\commons-collections-3.2.1-1.0.0.jar
 ${file.reference.commons-beanutils-1.8.3.jar}=${file.reference.commons-collections-3.2.1-1.0.0.jar}\:${file.reference.commons-digester-2.1.jar}\:${file.reference.commons-logging-api-1.1.jar}\:${file.reference.itext-pdfa-5.4.0.jar}\:${file.reference.javax.mail-1.6.2.jar-1}\:${file.reference.javax.mail.jar-1}\:${file.reference.jcalendar-1.4.jar-1}\:${file.reference.activation.jar}\:${file.reference.AbsoluteLayout.jar}
 debug.test.classpath=${run.test.classpath}
 javac.external.vm=true
@@ -90,7 +93,6 @@ manifest.file=manifest.mf
 javadoc.html5=false
 meta.inf.dir=${src.dir}/META-INF
 javac.test.processorpath=${javac.test.classpath}
-file.reference.commons-collections4-4.4.jar=lib\\libs for report\\commons-collections4-4.4.jar
 javac.modulepath=
 <<<<<<<=HEAD
 jlink.additionalparam=
@@ -105,7 +107,6 @@ javac.processorpath=\
 test.src.dir=test
 ${file.reference.poi-ooxml-schemas-4.0.1.jar}=${file.reference.xmlbeans-3.0.2.jar}
 file.reference.poi-ooxml-4.0.1.jar=lib\\thuvienpoi\\poi-ooxml-4.0.1.jar
-file.reference.itextpdf-5.3.4.jar=lib\\libs for report\\itextpdf-5.3.4.jar
 ${file.reference.webcam-capture-0.3.12.jar-1}=
 run.modulepath=\
     ${javac.modulepath}
@@ -121,7 +122,6 @@ javadoc.author=false
 main.class=Views.DangNhap
 file.reference.poi-ooxml-schemas-4.0.1.jar=lib\\thuvienpoi\\poi-ooxml-schemas-4.0.1.jar
 endorsed.classpath=
-file.reference.itext-pdfa-5.4.0.jar=lib\\libs for report\\itext-pdfa-5.4.0.jar
 file.reference.qrgen-1.0.jar-2=D\:\\DuAn1_moiTruong\\writeBarCore\\qrgen-1.0.jar
 file.reference.qrgen-1.0.jar-1=lib\\writeBarCore\\qrgen-1.0.jar
 junit.selected.version=3
@@ -163,16 +163,6 @@ javac.classpath=\
     ${file.reference.javax.mail.jar-1}:\
     ${file.reference.jcalendar-1.4.jar-1}:\
     ${file.reference.mssql-jdbc-11.2.0.jre17.jar-1}:\
-    ${file.reference.commons-beanutils-1.8.3.jar}:\
-    ${file.reference.commons-collections-3.2.1-1.0.0.jar}:\
-    ${file.reference.commons-collections4-4.4.jar}:\
-    ${file.reference.commons-digester-2.1.jar}:\
-    ${file.reference.commons-logging-api-1.1.jar}:\
-    ${file.reference.groovy-all-2.1.3.jar}:\
-    ${file.reference.itext-2.1.7.jar}:\
-    ${file.reference.itext-pdfa-5.4.0.jar}:\
-    ${file.reference.itextpdf-5.3.4.jar}:\
-    ${file.reference.jasperreports-6.10.0.jar}:\
     ${file.reference.bridj-0.6.2-windows-only.jar-1}:\
     ${file.reference.core-3.3.0.jar-1}:\
     ${file.reference.javase-3.3.0.jar-1}:\
@@ -190,8 +180,17 @@ javac.classpath=\
     ${file.reference.barcode.jar-1}:\
     ${file.reference.qrgen-1.0.jar-1}:\
     ${file.reference.zxing-core-1.7.jar-1}:\
-    ${file.reference.zxing-j2se-1.7.jar-1}
-file.reference.commons-logging-api-1.1.jar=lib\\libs for report\\commons-logging-api-1.1.jar
+    ${file.reference.zxing-j2se-1.7.jar-1}:\
+    ${file.reference.commons-beanutils-1.8.3.jar}:\
+    ${file.reference.commons-collections-3.2.1-1.0.0.jar}:\
+    ${file.reference.commons-collections4-4.4.jar}:\
+    ${file.reference.commons-digester-2.1.jar}:\
+    ${file.reference.commons-logging-api-1.1.jar}:\
+    ${file.reference.groovy-all-2.1.3.jar}:\
+    ${file.reference.itext-2.1.7.jar}:\
+    ${file.reference.itextpdf-5.3.4.jar}:\
+    ${file.reference.jasperreports-6.10.0.jar}:\
+    ${file.reference.xercesimpl-2.7.0.jar}
 build.classes.excludes=**/*.java,**/*.form
 dist.jlink.dir=${dist.dir}/jlink
 dist.jar=${dist.dir}/PhanMemBanGiay.jar
@@ -205,7 +204,6 @@ build.test.results.dir=${build.dir}/test/results
 ${file.reference.webcam-capture-0.3.12.jar-3}=${file.reference.bridj-0.6.2-windows-only.jar-3}\:${file.reference.core-3.3.0.jar-3}\:${file.reference.javase-3.3.0.jar-3}\:${file.reference.log4j-1.2.17.jar-3}\:${file.reference.slf4j-api-1.6.2.jar-3}\:${file.reference.slf4j-log4j12-1.6.2.jar-3}\:${file.reference.barcode.jar-3}\:${file.reference.qrgen-1.0.jar-3}\:${file.reference.zxing-core-1.7.jar-3}\:${file.reference.zxing-j2se-1.7.jar-3}\:${file.reference.javax.mail-1.6.2.jar-1}\:${file.reference.javax.mail.jar-1}\:${file.reference.jcalendar-1.4.jar-1}\:${file.reference.mssql-jdbc-11.2.0.jre17.jar-1}
 file.reference.zxing-core-1.7.jar-2=D\:\\DuAn1_moiTruong\\writeBarCore\\zxing-core-1.7.jar
 file.reference.zxing-core-1.7.jar-1=lib\\writeBarCore\\zxing-core-1.7.jar
-file.reference.commons-digester-2.1.jar=lib\\libs for report\\commons-digester-2.1.jar
 file.reference.jcalendar-1.4.jar-1=lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-2=D\:\\DuAn1_moiTruong\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 ${file.reference.mssql-jdbc-9.4.0.jre16.jar}=
