--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,26 +1,14 @@
-#Tue Apr 04 23:20:34 ICT 2023
+#Sat Apr 08 02:43:15 ICT 2023
 =\=\=\=\=\=\=
-file.reference.commons-beanutils-1.8.3.jar=lib\\libreport\\commons-beanutils-1.8.3.jar
-file.reference.commons-collections-3.2.1-1.0.0.jar=lib\\libreport\\commons-collections-3.2.1-1.0.0.jar
-file.reference.commons-collections4-4.4.jar=lib\\libreport\\commons-collections4-4.4.jar
-file.reference.commons-digester-2.1.jar=lib\\libreport\\commons-digester-2.1.jar
-file.reference.commons-logging-api-1.1.jar=lib\\libreport\\commons-logging-api-1.1.jar
-file.reference.groovy-all-2.1.3.jar=lib\\libreport\\groovy-all-2.1.3.jar
-file.reference.itext-2.1.7.jar=lib\\libreport\\itext-2.1.7.jar
-file.reference.itextpdf-5.3.4.jar=lib\\libreport\\itextpdf-5.3.4.jar
-file.reference.jasperreports-6.10.0.jar=lib\\libreport\\jasperreports-6.10.0.jar
-file.reference.javax.servlet-api-4.0.1.jar=lib\\Jchart\\javax.servlet-api-4.0.1.jar
-file.reference.jcommon-1.0.23.jar=lib\\Jchart\\jcommon-1.0.23.jar
-file.reference.jfreechart-1.5.4.jar=lib\\Jchart\\jfreechart-1.5.4.jar
-file.reference.junit-4.12.jar=lib\\Jchart\\junit-4.12.jar
-file.reference.xercesimpl-2.7.0.jar=lib\\libreport\\xercesimpl-2.7.0.jar
+excludes=
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-excludes=
+file.reference.jcommon-1.0.23.jar=lib\\Jchart\\jcommon-1.0.23.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 ${file.reference.jcalendar-1.4.jar-1}=>>>>>>> origin/master
 ${file.reference.jxl-2.6.9.jar}=${file.reference.mssql-jdbc-11.2.0.jre17.jar-1}
+file.reference.groovy-all-2.1.3.jar=lib\\libreport\\groovy-all-2.1.3.jar
 file.reference.zxing-j2se-1.7.jar=D\:\\DuAn\\DuAnNhom6\\lib\\writeBarCore\\zxing-j2se-1.7.jar
 jnlp.offline-allowed=false
 jnlp.signing.keystore=
@@ -39,6 +27,7 @@ file.reference.barcode.jar-1=lib\\writeBarCore\\barcode.jar
 file.reference.poi-4.0.1.jar=lib\\thuvienpoi\\poi-4.0.1.jar
 file.reference.log4j-1.2.17.jar=D\:\\DuAn\\DuAnNhom6\\lib\\QuetQR\\log4j-1.2.17.jar
 jar.archive.disabled=${jnlp.enabled}
+file.reference.xercesimpl-2.7.0.jar=lib\\libreport\\xercesimpl-2.7.0.jar
 file.reference.webcam-capture-0.3.12.jar-2=D\:\\DuAn1_moiTruong\\QuetQR\\webcam-capture-0.3.12.jar
 javac.source=17
 javadoc.use=true
@@ -54,12 +43,13 @@ jnlp.signed=false
 file.reference.javax.mail.jar=D\:\\DuAn\\DuAnNhom6\\lib\\javax.mail.jar
 file.reference.slf4j-log4j12-1.6.2.jar-1=lib\\QuetQR\\slf4j-log4j12-1.6.2.jar
 ${file.reference.xmlbeans-3.0.2.jar}=${file.reference.bridj-0.6.2-windows-only.jar-1}\:${file.reference.core-3.3.0.jar-1}\:${file.reference.javase-3.3.0.jar-1}\:${file.reference.log4j-1.2.17.jar-1}\:${file.reference.slf4j-api-1.6.2.jar-1}\:${file.reference.slf4j-log4j12-1.6.2.jar-1}\:<<<<<<< HEAD
+file.reference.commons-beanutils-1.8.3.jar=lib\\libreport\\commons-beanutils-1.8.3.jar
 file.reference.webcam-capture-0.3.12.jar-1=lib\\QuetQR\\webcam-capture-0.3.12.jar
+file.reference.jasperreports-6.10.0.jar=lib\\libreport\\jasperreports-6.10.0.jar
 manifest.custom.permissions=
 ${file.reference.AbsoluteLayout.jar}=<<<<<<< HEAD
 mkdist.disabled=false
-run.test.modulepath=\
-    ${javac.test.modulepath}
+run.test.modulepath=${javac.test.modulepath}
 build.classes.dir=${build.dir}/classes
 debug.test.modulepath=${run.test.modulepath}
 file.reference.zxing-j2se-1.7.jar-2=D\:\\DuAn1_moiTruong\\writeBarCore\\zxing-j2se-1.7.jar
@@ -69,19 +59,23 @@ file.reference.commons-compress-1.18.jar=lib\\thuvienpoi\\commons-compress-1.18.
 file.reference.lib-writeBarCore=lib\\writeBarCore
 file.reference.core-3.3.0.jar-1=lib\\QuetQR\\core-3.3.0.jar
 file.reference.core-3.3.0.jar-2=D\:\\DuAn1_moiTruong\\QuetQR\\core-3.3.0.jar
+file.reference.javax.servlet-api-4.0.1.jar=lib\\Jchart\\javax.servlet-api-4.0.1.jar
 ${file.reference.mssql-jdbc-11.2.0.jre17.jar}=>>>>>>> 34ce105e07b368cd3386f8626f3f9ad95ba53bd1
 file.reference.commons-collections4-4.2.jar=lib\\thuvienpoi\\commons-collections4-4.2.jar
 jnlp.enabled=false
+file.reference.itext-2.1.7.jar=lib\\libreport\\itext-2.1.7.jar
 dist.dir=dist
 build.dir=build
 dist.archive.excludes=
 ${libs.absolutelayout.classpath}=${file.reference.commons-codec-1.11.jar}\:${file.reference.commons-collections4-4.2.jar}\:${file.reference.commons-compress-1.18.jar}\:${file.reference.poi-4.0.1.jar}\:${file.reference.poi-ooxml-4.0.1.jar}\:${file.reference.poi-ooxml-schemas-4.0.1.jar}\:${file.reference.xmlbeans-3.0.2.jar}\:${file.reference.activation.jar}\:${file.reference.javax.mail-1.6.2.jar-1}\:${file.reference.javax.mail.jar-1}\:${file.reference.mssql-jdbc-11.2.0.jre17.jar-1}\:${file.reference.barcode.jar-1}\:${file.reference.qrgen-1.0.jar-1}\:${file.reference.zxing-core-1.7.jar-1}\:${file.reference.zxing-j2se-1.7.jar-1}\:${file.reference.bridj-0.6.2-windows-only.jar-1}\:${file.reference.core-3.3.0.jar-1}\:${file.reference.javase-3.3.0.jar-1}\:${file.reference.log4j-1.2.17.jar-1}\:${file.reference.slf4j-api-1.6.2.jar-1}\:${file.reference.slf4j-log4j12-1.6.2.jar-1}\:${file.reference.webcam-capture-0.3.12.jar-1}\:${file.reference.jcalendar-1.4.jar-1}
 file.reference.jfreechart-1.0.1-demo.jar=lib\\jfreechart-1.0.1\\jfreechart-1.0.1-demo.jar
 file.reference.zxing-core-1.7.jar=D\:\\DuAn\\DuAnNhom6\\lib\\writeBarCore\\zxing-core-1.7.jar
+file.reference.jfreechart-1.5.4.jar=lib\\Jchart\\jfreechart-1.5.4.jar
 file.reference.log4j-1.2.17.jar-2=D\:\\DuAn1_moiTruong\\QuetQR\\log4j-1.2.17.jar
 file.reference.mssql-jdbc-11.2.0.jre17.jar-1=lib\\mssql-jdbc-11.2.0.jre17.jar
 file.reference.log4j-1.2.17.jar-1=lib\\QuetQR\\log4j-1.2.17.jar
 javadoc.version=false
+file.reference.commons-collections-3.2.1-1.0.0.jar=lib\\libreport\\commons-collections-3.2.1-1.0.0.jar
 ${file.reference.commons-beanutils-1.8.3.jar}=${file.reference.commons-collections-3.2.1-1.0.0.jar}\:${file.reference.commons-digester-2.1.jar}\:${file.reference.commons-logging-api-1.1.jar}\:${file.reference.itext-pdfa-5.4.0.jar}\:${file.reference.javax.mail-1.6.2.jar-1}\:${file.reference.javax.mail.jar-1}\:${file.reference.jcalendar-1.4.jar-1}\:${file.reference.activation.jar}\:${file.reference.AbsoluteLayout.jar}
 debug.test.classpath=${run.test.classpath}
 javac.external.vm=true
@@ -93,23 +87,22 @@ manifest.file=manifest.mf
 javadoc.html5=false
 meta.inf.dir=${src.dir}/META-INF
 javac.test.processorpath=${javac.test.classpath}
+file.reference.commons-collections4-4.4.jar=lib\\libreport\\commons-collections4-4.4.jar
 javac.modulepath=
 <<<<<<<=HEAD
 jlink.additionalparam=
 ${file.reference.activation.jar}=${file.reference.javax.mail-1.6.2.jar-1}\:${file.reference.javax.mail.jar-1}
 file.reference.AbsoluteLayout.jar=C\:\\Program Files\\NetBeans-13\\netbeans\\java\\modules\\ext\\AbsoluteLayout.jar
-run.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}
+run.classpath=${javac.classpath}\:${build.classes.dir}
 file.reference.javax.mail-1.6.2.jar=D\:\\DuAn\\DuAnNhom6\\lib\\javax.mail-1.6.2.jar
-javac.processorpath=\
-    ${javac.classpath}
+javac.processorpath=${javac.classpath}
 test.src.dir=test
 ${file.reference.poi-ooxml-schemas-4.0.1.jar}=${file.reference.xmlbeans-3.0.2.jar}
 file.reference.poi-ooxml-4.0.1.jar=lib\\thuvienpoi\\poi-ooxml-4.0.1.jar
+file.reference.junit-4.12.jar=lib\\Jchart\\junit-4.12.jar
+file.reference.itextpdf-5.3.4.jar=lib\\libreport\\itextpdf-5.3.4.jar
 ${file.reference.webcam-capture-0.3.12.jar-1}=
-run.modulepath=\
-    ${javac.modulepath}
+run.modulepath=${javac.modulepath}
 jnlp.codebase.type=no.codebase
 jar.index=${jnlp.enabled}
 ${file.reference.mssql-jdbc-11.2.0.jre17.jar-1}=${file.reference.AbsoluteLayout.jar}
@@ -124,7 +117,7 @@ file.reference.poi-ooxml-schemas-4.0.1.jar=lib\\thuvienpoi\\poi-ooxml-schemas-4.
 endorsed.classpath=
 file.reference.qrgen-1.0.jar-2=D\:\\DuAn1_moiTruong\\writeBarCore\\qrgen-1.0.jar
 file.reference.qrgen-1.0.jar-1=lib\\writeBarCore\\qrgen-1.0.jar
-junit.selected.version=3
+junit.selected.version=4
 source.encoding=UTF-8
 file.reference.webcam-capture-0.3.12.jar=D\:\\DuAn\\DuAnNhom6\\lib\\QuetQR\\webcam-capture-0.3.12.jar
 includes=**
@@ -152,45 +145,8 @@ file.reference.slf4j-api-1.6.2.jar-1=lib\\QuetQR\\slf4j-api-1.6.2.jar
 javadoc.encoding=${source.encoding}
 file.reference.slf4j-api-1.6.2.jar-2=D\:\\DuAn1_moiTruong\\QuetQR\\slf4j-api-1.6.2.jar
 file.reference.javase-3.3.0.jar=D\:\\DuAn\\DuAnNhom6\\lib\\QuetQR\\javase-3.3.0.jar
-javac.classpath=\
-    ${libs.absolutelayout.classpath}:\
-    ${file.reference.activation.jar}:\
-    ${file.reference.javax.mail-1.6.2.jar-1}:\
-    ${file.reference.javax.mail.jar-1}:\
-    ${file.reference.jcalendar-1.4.jar-1}:\
-    ${file.reference.mssql-jdbc-11.2.0.jre17.jar-1}:\
-    ${file.reference.bridj-0.6.2-windows-only.jar-1}:\
-    ${file.reference.core-3.3.0.jar-1}:\
-    ${file.reference.javase-3.3.0.jar-1}:\
-    ${file.reference.log4j-1.2.17.jar-1}:\
-    ${file.reference.slf4j-api-1.6.2.jar-1}:\
-    ${file.reference.slf4j-log4j12-1.6.2.jar-1}:\
-    ${file.reference.webcam-capture-0.3.12.jar-1}:\
-    ${file.reference.commons-codec-1.11.jar}:\
-    ${file.reference.commons-collections4-4.2.jar}:\
-    ${file.reference.commons-compress-1.18.jar}:\
-    ${file.reference.poi-4.0.1.jar}:\
-    ${file.reference.poi-ooxml-4.0.1.jar}:\
-    ${file.reference.poi-ooxml-schemas-4.0.1.jar}:\
-    ${file.reference.xmlbeans-3.0.2.jar}:\
-    ${file.reference.barcode.jar-1}:\
-    ${file.reference.qrgen-1.0.jar-1}:\
-    ${file.reference.zxing-core-1.7.jar-1}:\
-    ${file.reference.zxing-j2se-1.7.jar-1}:\
-    ${file.reference.commons-beanutils-1.8.3.jar}:\
-    ${file.reference.commons-collections-3.2.1-1.0.0.jar}:\
-    ${file.reference.commons-collections4-4.4.jar}:\
-    ${file.reference.commons-digester-2.1.jar}:\
-    ${file.reference.commons-logging-api-1.1.jar}:\
-    ${file.reference.groovy-all-2.1.3.jar}:\
-    ${file.reference.itext-2.1.7.jar}:\
-    ${file.reference.itextpdf-5.3.4.jar}:\
-    ${file.reference.jasperreports-6.10.0.jar}:\
-    ${file.reference.xercesimpl-2.7.0.jar}:\
-    ${file.reference.javax.servlet-api-4.0.1.jar}:\
-    ${file.reference.jcommon-1.0.23.jar}:\
-    ${file.reference.jfreechart-1.5.4.jar}:\
-    ${file.reference.junit-4.12.jar}
+javac.classpath=${libs.absolutelayout.classpath}\:${file.reference.activation.jar}\:${file.reference.javax.mail-1.6.2.jar-1}\:${file.reference.javax.mail.jar-1}\:${file.reference.jcalendar-1.4.jar-1}\:${file.reference.mssql-jdbc-11.2.0.jre17.jar-1}\:${file.reference.bridj-0.6.2-windows-only.jar-1}\:${file.reference.core-3.3.0.jar-1}\:${file.reference.javase-3.3.0.jar-1}\:${file.reference.log4j-1.2.17.jar-1}\:${file.reference.slf4j-api-1.6.2.jar-1}\:${file.reference.slf4j-log4j12-1.6.2.jar-1}\:${file.reference.webcam-capture-0.3.12.jar-1}\:${file.reference.commons-codec-1.11.jar}\:${file.reference.commons-collections4-4.2.jar}\:${file.reference.commons-compress-1.18.jar}\:${file.reference.poi-4.0.1.jar}\:${file.reference.poi-ooxml-4.0.1.jar}\:${file.reference.poi-ooxml-schemas-4.0.1.jar}\:${file.reference.xmlbeans-3.0.2.jar}\:${file.reference.barcode.jar-1}\:${file.reference.qrgen-1.0.jar-1}\:${file.reference.zxing-core-1.7.jar-1}\:${file.reference.zxing-j2se-1.7.jar-1}\:${file.reference.commons-beanutils-1.8.3.jar}\:${file.reference.commons-collections-3.2.1-1.0.0.jar}\:${file.reference.commons-collections4-4.4.jar}\:${file.reference.commons-digester-2.1.jar}\:${file.reference.commons-logging-api-1.1.jar}\:${file.reference.groovy-all-2.1.3.jar}\:${file.reference.itext-2.1.7.jar}\:${file.reference.itextpdf-5.3.4.jar}\:${file.reference.jasperreports-6.10.0.jar}\:${file.reference.xercesimpl-2.7.0.jar}\:${file.reference.javax.servlet-api-4.0.1.jar}\:${file.reference.jcommon-1.0.23.jar}\:${file.reference.jfreechart-1.5.4.jar}\:${file.reference.junit-4.12.jar}\:${file.reference.google-chart.jar}
+file.reference.commons-logging-api-1.1.jar=lib\\libreport\\commons-logging-api-1.1.jar
 build.classes.excludes=**/*.java,**/*.form
 dist.jlink.dir=${dist.dir}/jlink
 dist.jar=${dist.dir}/PhanMemBanGiay.jar
@@ -204,9 +160,11 @@ build.test.results.dir=${build.dir}/test/results
 ${file.reference.webcam-capture-0.3.12.jar-3}=${file.reference.bridj-0.6.2-windows-only.jar-3}\:${file.reference.core-3.3.0.jar-3}\:${file.reference.javase-3.3.0.jar-3}\:${file.reference.log4j-1.2.17.jar-3}\:${file.reference.slf4j-api-1.6.2.jar-3}\:${file.reference.slf4j-log4j12-1.6.2.jar-3}\:${file.reference.barcode.jar-3}\:${file.reference.qrgen-1.0.jar-3}\:${file.reference.zxing-core-1.7.jar-3}\:${file.reference.zxing-j2se-1.7.jar-3}\:${file.reference.javax.mail-1.6.2.jar-1}\:${file.reference.javax.mail.jar-1}\:${file.reference.jcalendar-1.4.jar-1}\:${file.reference.mssql-jdbc-11.2.0.jre17.jar-1}
 file.reference.zxing-core-1.7.jar-2=D\:\\DuAn1_moiTruong\\writeBarCore\\zxing-core-1.7.jar
 file.reference.zxing-core-1.7.jar-1=lib\\writeBarCore\\zxing-core-1.7.jar
+file.reference.commons-digester-2.1.jar=lib\\libreport\\commons-digester-2.1.jar
 file.reference.jcalendar-1.4.jar-1=lib\\jcalendar-1.4.jar
 file.reference.jcalendar-1.4.jar-2=D\:\\DuAn1_moiTruong\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 ${file.reference.mssql-jdbc-9.4.0.jre16.jar}=
+file.reference.google-chart.jar=lib\\Jchart\\google-chart.jar
 file.reference.javase-3.3.0.jar-2=D\:\\DuAn1_moiTruong\\QuetQR\\javase-3.3.0.jar
 ${file.reference.bridj-0.6.2-windows-only.jar-1}=${file.reference.core-3.3.0.jar-1}\:${file.reference.javase-3.3.0.jar-1}\:${file.reference.log4j-1.2.17.jar-1}\:${file.reference.slf4j-api-1.6.2.jar-1}\:${file.reference.slf4j-log4j12-1.6.2.jar-1}\:${file.reference.webcam-capture-0.3.12.jar-1}\:${file.reference.barcode.jar-1}\:${file.reference.qrgen-1.0.jar-1}\:${file.reference.zxing-core-1.7.jar-1}\:${file.reference.zxing-j2se-1.7.jar-1}\:\=\=\=\=\=\=\=
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
@@ -218,15 +176,12 @@ build.generated.dir=${build.dir}/generated
 file.reference.xmlbeans-3.0.2.jar=lib\\thuvienpoi\\xmlbeans-3.0.2.jar
 >>>>>>>=3756dd14dd493cd4e6988fa77a181b64e214dffa
 application.title=PhanMemBanGiay
-javac.test.modulepath=\
-    ${javac.modulepath}
+javac.test.modulepath=${javac.modulepath}
 ${file.reference.barcode.jar-1}=${file.reference.qrgen-1.0.jar-1}\:${file.reference.zxing-core-1.7.jar-1}\:${file.reference.zxing-j2se-1.7.jar-1}\:${file.reference.bridj-0.6.2-windows-only.jar-1}\:${file.reference.core-3.3.0.jar-1}\:${file.reference.javase-3.3.0.jar-1}\:${file.reference.log4j-1.2.17.jar-1}\:${file.reference.slf4j-api-1.6.2.jar-1}\:${file.reference.slf4j-log4j12-1.6.2.jar-1}\:${file.reference.webcam-capture-0.3.12.jar-1}
 file.reference.slf4j-api-1.6.2.jar=D\:\\DuAn\\DuAnNhom6\\lib\\QuetQR\\slf4j-api-1.6.2.jar
 manifest.custom.codebase=
 jnlp.descriptor=application
-run.test.classpath=\
-    ${javac.test.classpath}:\
-    ${build.test.classes.dir}
+run.test.classpath=${javac.test.classpath}\:${build.test.classes.dir}
 dist.jlink.output=${dist.jlink.dir}/PhanMemBanGiay
 src.dir=src
 annotation.processing.run.all.processors=true
